--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
   },
   "dependencies": {
     "argon2": "^0.30.3",
+    "cloudinary": "^1.36.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.10.0"
   }
 }
- 
